# cmdex

./: Cargo.toml  README.md
.github/workflows/: rust-unit-tests.yml
src/: app.rs  codex.rs  codex_history.rs  codex_protocol.rs  codex_tests.rs  config.rs  main.rs  syntax.rs  theme.rs  workspace.rs
src/app/: actions.rs  chat.rs  effects.rs  event_types.rs  events.rs  events_chat.rs  events_git.rs  events_lsp.rs  events_shell.rs  events_workspace.rs  input.rs  lsp.rs  lsp_actions.rs  lsp_document.rs  lsp_framing.rs  lsp_protocol.rs  lsp_requests.rs  lsp_runtime.rs  mod.rs  mouse_actions.rs  navigation_actions.rs  runtime.rs  session.rs  shell.rs  test_support.rs  tests.rs  tests_chat.rs  tests_lsp.rs  ui.rs  workspace_actions.rs  workspace_watcher.rs
src/app/components/: add_agent_dialog.rs  agents_sidebar.rs  chat.rs  chat_input.rs  git_diff.rs  git_diff_sidebar.rs  help_bar.rs  mod.rs  navigation.rs  shared.rs  shell.rs  shell_sidebar.rs  workspace.rs  workspace_editor.rs  workspace_editor_input.rs  workspace_editor_shortcuts.rs  workspace_keys.rs  workspace_mouse.rs  workspace_sidebar.rs  workspace_sidebar_input.rs
src/workspace/: browser.rs  browser_loading.rs  browser_support.rs  diff.rs  diff_preview.rs  editor.rs  editor_commands.rs  editor_keymap.rs  editor_overlays.rs  git_repository.rs  mod.rs  render.rs  tests.rs
syntaxes/: kr.sublime-syntax
