[package]
name = "cmdex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
ignore = "0.4"
portable-pty = "0.9"
pulldown-cmark = "0.13"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
syntect = "5.2"
tokio = { version = "1.46", features = ["macros", "process", "rt-multi-thread", "sync", "time", "io-util"] }
